force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Calendar_Setting__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Calendar_Setting__c</fullName>
    <label>Calendar Setting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>