force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Columns__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Columns__c</fullName>
    <label>Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>