force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Filters__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Filters__c</fullName>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>