force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Grid_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Grid_Configuration__c</fullName>
    <label>Grid Configuration</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>