force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Icon__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Icon__c</fullName>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>