force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Master_Object_Columns__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Master_Object_Columns__c</fullName>
    <label>Master Object Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>