force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__ReadOnly_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ReadOnly_Criteria__c</fullName>
    <label>ReadOnly Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>