force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Relationship_Name__c</fullName>
    <label>RelationShip Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>