force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Time_Line_Settings__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Time_Line_Settings__c</fullName>
    <label>Time Line Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>