force-app/main/default/objects/Negoptim__Grid_Settings__mdt/fields/Negoptim__Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
                <default>true</default>
                <label>Detail</label>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Master-Detail</fullName>
            </value>
            <value>
                <fullName>None-Master-Detail</fullName>
            </value>
            <value>
                <fullName>Master-Detail-Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>